WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202492
DoubleToStringConverter::ToExponential() should null terminate its string.
https://bugs.webkit.org/show_bug.cgi?id=202492
Summary
DoubleToStringConverter::ToExponential() should null terminate its string.
Mark Lam
Reported
2019-10-02 13:53:37 PDT
<
rdar://problem/55907708
>
Attachments
proposed patch.
(3.94 KB, patch)
2019-10-02 14:04 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2019-10-02 14:04:03 PDT
Created
attachment 380056
[details]
proposed patch.
Mark Lam
Comment 2
2019-10-02 15:34:59 PDT
Comment on
attachment 380056
[details]
proposed patch. Thanks for the review. Landing now.
WebKit Commit Bot
Comment 3
2019-10-02 16:21:04 PDT
Comment on
attachment 380056
[details]
proposed patch. Clearing flags on attachment: 380056 Committed
r250636
: <
https://trac.webkit.org/changeset/250636
>
WebKit Commit Bot
Comment 4
2019-10-02 16:21:06 PDT
All reviewed patches have been landed. Closing bug.
Yusuke Suzuki
Comment 5
2019-10-02 20:21:00 PDT
Is it better to upstream this change to
https://github.com/google/double-conversion
?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug