Source/WTF/wtf/dtoa/double-conversion.cc
@@ -267,10 +267,12 @@ bool DoubleToStringConverter::ToExponential(
                   &sign, &decimal_rep_length, &decimal_point);
     ASSERT(decimal_rep_length <= requested_digits + 1);
 
-    for (int i = decimal_rep_length; i < requested_digits + 1; ++i) {
-      decimal_rep[i] = '0';
+    if (decimal_rep_length < requested_digits + 1) {
+      for (int i = decimal_rep_length; i < requested_digits + 1; ++i)
+        decimal_rep[i] = '0';
+      decimal_rep_length = requested_digits + 1;
+      decimal_rep[decimal_rep_length] = '\0';
     }
-    decimal_rep_length = requested_digits + 1;
   }
 
   bool unique_zero = ((flags_ & UNIQUE_ZERO) != 0);
